Top nav correct on mobile

--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ background-color: #A8CB7C;
 	body{font-size: 12px;}
 }
 @media only screen and (max-width: 400px) {
-	.navlinks{float:left;}
+	.navlinks{float:left; padding: 25px 0;}
 }
 @media only screen and (max-width: 300px) {
 	body{font-size: 10px;}
